minikube/k8s-poc-deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: k8s-poc
  name: k8s-poc-green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: k8s-poc-green
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: k8s-poc-green
    spec:
      containers:
      - image: msigismondi/k8s-poc:alpha
        name: k8s-poc-green
        resources: {}
        args: ["--spring.config.location=config/application.properties"]
        volumeMounts:
        - name: app-prop-volume
          mountPath: /config/
          readOnly: true
      volumes:
      - name: app-prop-volume
        configMap: 
          name: application-properties
status: {}
