minikube/k8s-poc-service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: k8s-poc-blue
  name: k8s-poc-blue
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8080
  selector:
    app: k8s-poc-blue
  type: LoadBalancer
status:
  loadBalancer: {}
