minikube/k8s-poc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-poc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: k8s-poc.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-poc-blue
            port:
              number: 8081
